# patterns-serverless-rust-minimal

./: .gitignore  Cargo.toml  LICENSE  README.md  cdk.json  docker-compose.yml  package-lock.json  package.json  rust-toolchain  tsconfig.json
.github/ISSUE_TEMPLATE/: generic-issue.md
.github/actions/build-asset/: action.yml
.github/actions/change-shell/: action.yml
.github/actions/setup-build-deps/: action.yml
.github/actions/setup-node-deps/: action.yml
.github/workflows/: benchmark.yml  cd-release.yml  ci.yml  pre-release.yml  release.yml
benchmark/: benchmark-payload.json  benchmark.sh  benchmark.ts  post-process.ts  response-times.md  traces.json
deployment/lib/: dynamodb-stack.ts  lambda-stack.ts
src/: global.rs  handler.rs  lib.rs  main.rs
src/dynamodb/: types.rs
src/graphql/: mod.rs  mutation.rs  query.rs  types.rs
tests/: main_test.rs
