[package]
name = "sls_rust_minimal"
version = "1.0.0"
authors = ["Christian Kjaer <ckl@codetalk.io>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[profile.release]
panic = 'abort' # Less code to include into binary.
codegen-units = 1 # Optimization over all codebase (better optimization, slower build).
opt-level = 'z' # Optimization for size (or 's' for a less aggressiv alternative).
lto = true # Link time optimization using using whole-program analysis.

[dependencies]
# Until the original project starts moving again, we'll rely on Netlify's fork, which is
# maintained. See https://github.com/awslabs/aws-lambda-rust-runtime/issues/274 for more.
lambda = { package = "netlify_lambda", version = "0.1.3" }
tokio = "1.0.1"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.61"

[patch.crates-io]
# Remove this patch whenever https://github.com/netlify/aws-lambda-rust-runtime/pull/8 is merged.
lambda = { git = "https://github.com/simnalamburt/aws-lambda-rust-runtime", branch = "tokio-1.0", package = "netlify_lambda" }

[dev-dependencies]
pretty_assertions = "0.6.1"
